bug 1100335 - Use OutputDebugString on Windows in js_DumpBacktrace. r=jorendorff

--HG--
extra : rebase_source : 7856d22b24385dc475ce9975da66f3e94ab0b154