js/src/jsobj.cpp
@@ -3931,6 +3931,11 @@ js_DumpBacktrace(JSContext *cx)
                         script, script->pcToOffset(i.pc()));
     }
     fprintf(stdout, "%s", sprinter.string());
+#ifdef XP_WIN32
+    if (IsDebuggerPresent()) {
+        OutputDebugStringA(sprinter.string());
+    }
+#endif
 }
 
 void
